Fix #1367 Remove -XX:MaxPermSize JVM flag