@@ -70,7 +70,7 @@ wait_for(){
 start_rundeck(){
 	local FARGS=("$@")
 	local launcherJar=${FARGS[0]}
-	java -Xmx1024m -XX:MaxPermSize=256m -jar $launcherJar 
+	java -Xmx1024m -jar $launcherJar
 	# ( bash -c 'sleep 30; echo done; sleep 600' > $outfile 2>&1 ) &
 	
 }
@@ -157,7 +157,7 @@ run_ci_test(){
 
 		# start rundeck
 
-		(java -Xmx1024m -XX:MaxPermSize=256m -jar $launcherJar > $DIR/rundeck.out 2>&1 ) &
+		(java -Xmx1024m -jar $launcherJar > $DIR/rundeck.out 2>&1 ) &
 		RDPID=$!
 
 		trap "{ kill -9 $RDPID ; echo '---Rundeck Killed---' ; cat $DIR/rundeck.out ; exit 255; }" EXIT SIGINT SIGTERM ERR
